Fixes sitemap view

--- a/sitemap.mustache
+++ b/sitemap.mustache
@@ -11,7 +11,11 @@
 </section>
 
 <section class="main">
-  {{ sitemap }}
+  <aside class="post-meta">
+  </aside>
+  <article class="post-content">
+    {{{ sitemap }}}
+  </article>
 </section>
 
 {{> partials.footer }}
