Proper sitemap view

--- a/sitemap.mustache
+++ b/sitemap.mustache
@@ -10,8 +10,9 @@
   </div>
 </section>
 
-<section class="main">
+<section class="post">
   <aside class="post-meta">
+    Last Updated {{ sitemap_last_updated}}
   </aside>
   <article class="post-content">
     {{{ sitemap }}}
