Fix sitemap meta info

--- a/sitemap.mustache
+++ b/sitemap.mustache
@@ -12,7 +12,7 @@
 
 <section class="post">
   <aside class="post-meta">
-    Last Updated {{ sitemap_last_updated}}
+    <h6>Last Updated {{ sitemap_last_updated}}</h6>
   </aside>
   <article class="post-content">
     {{{ sitemap }}}
