Fix sitemap meta info

--- a/sitemap.mustache
+++ b/sitemap.mustache
@@ -12,7 +12,9 @@
 
 <section class="post">
   <aside class="post-meta">
-    <h6>Last Updated {{ sitemap_last_updated}}</h6>
+    <hgroup>
+      <span>Last Updated <span style="white-space: nowrap;">{{ sitemap_last_updated}}</span></span>
+    </hgroup>
   </aside>
   <article class="post-content">
     {{{ sitemap }}}
