--- a/assets/src/css/modules/_layout.sass
+++ b/assets/src/css/modules/_layout.sass
@@ -20,9 +20,10 @@
       bottom: 0
       right: 0
       z-index: 0
-      background: rgba($dark, .5)
+      background: rgba($dark, .3)
 
   .left
+    position: relative
     text-decoration: none
     z-index: 1
 
